concord-server: handle invalid regex in dispatcher requirements (#1128)